working on layout and style, js to be added later

--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
     </style>
   </head>
   <body>
-    <main>
+    <main class="main">
       <div class="ratings__wrapper">
-        <img
-          src="./images/icon-star.svg"
-          class="ratings__start-icons"
-          alt="icon star"
-        />
+        <div class="ratings__image">
+          <img
+            src="./images/icon-star.svg"
+            class="ratings__start-icons"
+            alt="icon star"
+          />
+        </div>
+
         <h1 class="ratings__question">How did we do?</h1>
         <p class="ratings__instructions">
           Please let us know how we did with your support request. All feedback
