closing in on layout and styles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap');
+    </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
@@ -26,6 +29,9 @@
     </style>
   </head>
   <body>
+    <script>
+      0;
+    </script>
     <main class="main">
       <div class="ratings__wrapper">
         <div class="ratings__image">
@@ -42,13 +48,13 @@
           is appreciated to help us improve our offering!
         </p>
         <ul class="ratings__group">
-          <li class="ratings__rank">1</li>
-          <li class="ratings__rank">2</li>
-          <li class="ratings__rank">3</li>
-          <li class="ratings__rank">4</li>
-          <li class="ratings__rank">5</li>
+          <li class="ratings__rank" value="1">1</li>
+          <li class="ratings__rank" value="2">2</li>
+          <li class="ratings__rank" value="3">3</li>
+          <li class="ratings__rank" value="4">4</li>
+          <li class="ratings__rank" value="5">5</li>
         </ul>
-        <button class="ratings__submit" type="submit">SUBMIT</button>
+        <button type="submit" class="ratings__submit">SUBMIT</button>
       </div>
     </main>
 
