--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
       0;
     </script>
     <main class="main">
+      <div class="confirmation">
+        <div class="confirmation__wrapper">
+          <img src="./images/illustration-thank-you.svg" alt="" />
+          <p cofirmation__rating>
+            You selected<span class="confirmation__result"></span> out of 5
+          </p>
+          <h1>Thank you</h1>
+          <p>We appreciate you taking the time to give a rating</p>
+        </div>
+      </div>
       <div class="ratings__wrapper">
         <div class="ratings__image">
           <img
