--- a/index.html
+++ b/index.html
@@ -33,16 +33,24 @@
       0;
     </script>
     <main class="main">
-      <div class="confirmation">
-        <div class="confirmation__wrapper">
-          <img src="./images/illustration-thank-you.svg" alt="" />
-          <p cofirmation__rating>
-            You selected<span class="confirmation__result"></span> out of 5
-          </p>
-          <h1>Thank you</h1>
-          <p>We appreciate you taking the time to give a rating</p>
+      <div class="confirmation__wrapper">
+        <div class="confirmation__image">
+          <img
+            src="./images/illustration-thank-you.svg"
+            alt="thank you image"
+          />
         </div>
+
+        <p class="cofirmation__rating">
+          You selected&nbsp;<span class="confirmation__result"></span> out of 5
+        </p>
+        <h1 class="confirmation__ty">Thank you!</h1>
+        <p class="confirmation__text">
+          We appreciate you taking the time to give a rating. If you ever need
+          more support, don't hesitate to get in touch!
+        </p>
       </div>
+
       <div class="ratings__wrapper">
         <div class="ratings__image">
           <img
