--- a/index.html
+++ b/index.html
@@ -18,15 +18,6 @@
     <title>Frontend Mentor | Interactive rating component</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <script>
@@ -72,7 +63,13 @@
           <li class="ratings__rank" value="4">4</li>
           <li class="ratings__rank" value="5">5</li>
         </ul>
-        <button type="submit" class="ratings__submit">SUBMIT</button>
+        <button type="submit" class="ratings__submit">Submit</button>
+      </div>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">stuartambient</a>.
       </div>
     </main>
 
@@ -84,12 +81,6 @@
 
     Thank you state end -->
 
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
     <script src="index.js"></script>
   </body>
 </html>
